--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,26 +1,10 @@
-img{
-    width: 300px;
-    height: 250px;
-}
-.div2{
-    display: flex;
-}   
-.div1{
-  display: flex;
-   border: 1px solid;
-   width: 300px;
-   height: 500px; 
-background: #F5F5F5;
-}
-.div5{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 80px;
-}
 button{
-    background-color: black;
-    color: #fff;
-    width: 280px;
-    margin-left: 10px;
-    border-radius: 30px;
+    width: 200px;
+    height: 50px;
+    font-size: large;
+}
+.box{
+    width: 100%;
+    height: 200px;
+    background: gray;
 }
